aws/ops/reports/_lastrun.log
  File "/home/runner/work/si/si/aws/ops/pending/1680_freshness_manifest.py", line 40
    print("\ntop stale overall:", [(r['key'],f\"{r['age_h']}h/SLA{r['max_age_h']}h\") for r in st.get('stale_top_50',[])[:8]])
                                               ^
SyntaxError: unexpected character after line continuation character
